# urlkurztacean

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yaml
.claude/: cclsp.json  settings.local.json
migrations/: 20251216133041_initial.sql
src/: main.rs
src/lib/adapter/inbound/: http.rs
src/lib/adapter/inbound/http/: handlers.rs  routes.rs  state.rs
src/lib/adapter/outbound/storage/: in_memory.rs  postgres.rs
src/lib/adapter/storage/: in_memory.rs
src/lib/application/: ports.rs  services.rs
src/lib/domain/url_shortener/: models.rs  ports.rs
src/lib/domain/url_shortener/models/: original_url.rs  short_code.rs  shortened_url.rs
