[package]
name = "urlkurztacean"
version = "0.1.0"
edition = "2024"

[lib]
name = "urlkurztacean"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
nanoid = "0.4.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
url = "2.5.7"
