[package]
name = "urlkurztacean"
version = "0.1.0"
edition = "2024"

[lib]
name = "urlkurztacean"
path = "src/lib/lib.rs"


[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
nanoid = "0.4.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"
